[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player/09-Idle Sword/Idle Sword 05.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Player/09-Idle Sword/Idle Sword 02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Player/09-Idle Sword/Idle Sword 04.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Player/09-Idle Sword/Idle Sword 01.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Player/09-Idle Sword/Idle Sword 03.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 05.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 04.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 02.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 03.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 06.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Player/10-Run Sword/Run Sword 01.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Player/11-Jump Sword/Jump Sword 03.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Player/11-Jump Sword/Jump Sword 01.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Player/11-Jump Sword/Jump Sword 02.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Player/12-Fall Sword/Fall Sword 01.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Player/15-Attack 1/Attack 1 02.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Player/15-Attack 1/Attack 1 03.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Player/15-Attack 1/Attack 1 01.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": false,
"name": "attack1",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "fall",
"speed": 0.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.007, 36.1235 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.1554, 8.96011 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "attack1"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtboxAttack" type="Area2D" parent="."]
position = Vector2( 73, 10 )
monitoring = false
monitorable = false
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionAttack" type="CollisionShape2D" parent="HurtboxAttack"]
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="HurtboxAttack" to="." method="_on_HurtboxAttack_body_entered"]
